syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "LeafletAlarmsGrpc";

package tracks;

service TracksGrpcService {
	rpc UpdateFigures (ProtoFigures) returns (ProtoFigures);
	rpc UpdateStates (ProtoObjectStates) returns (google.protobuf.BoolValue);
	rpc UpdateTracks (TrackPointsProto) returns (google.protobuf.BoolValue);	
}


message ProtoObjExtraProperty {
  string str_val = 1;
	string prop_name = 2;
	string visual_type = 3;
}

message ProtoCoord {
	double lat = 1;
	double lon = 2;
}

message ProtoGeometry {			
	repeated ProtoCoord coord = 1;
	string type = 2;
}

message ProtoFig {
	ProtoGeometry geometry = 1;
	optional double radius = 2;
	optional string zoom_level = 3;
	repeated ProtoObjExtraProperty extra_props = 4;
	string id = 5;
	optional string parent_id = 6;
	string name = 7;
	optional string external_type = 8;	
}

message ProtoFigures {
	repeated ProtoFig figs = 1;
	optional bool add_tracks = 2;
}

//  States
message ProtoObjectState
{
  string id = 1;
  repeated string states = 2;
  google.protobuf.Timestamp  timestamp = 3;
}

message ProtoObjectStates
{
	repeated ProtoObjectState states = 1;
}

// tracks

message ProtoGeoObject
{
  optional string id = 1;
  ProtoGeometry location = 2;
  optional double radius = 3;
  optional string zoom_level = 4;
}

message TrackPointProto
{
  string id = 1;
  ProtoGeoObject figure = 2;
  google.protobuf.Timestamp timestamp = 3;
  repeated ProtoObjExtraProperty extra_props = 4;
}

message TrackPointsProto
{
	repeated TrackPointProto tracks = 1;
}